Code blocks scroll instad of breaking out of container

--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -139,6 +139,7 @@ code {
   border: $code-border;
   max-width: 100%;
   word-wrap: break-word;
+  overflow-x: scroll;
 
   pre & {
     display: block;
